Mudança de CSS e Json

--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,8 +1,19 @@
+.login-container {
+    
+    background-color: white;
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    width: 320px;
+    text-align: center;
+    font: 500 'Poppins';
+
 h3 {
     font-size: 24px;
     margin-bottom: 30px;
     color:#0077cc;
     font-weight: bold;
+    
 }
 
 input {
@@ -12,6 +23,9 @@ input {
     border: 1px solid #ccc;
     border-radius: 12px;
     font-size: 16px;
+    font-family: 'Poppins';
+    
+
 }
 
 .Login {
@@ -37,16 +51,10 @@ input {
 }
 
 
-.login-container {
-    background-color: white;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    width: 320px;
-    text-align: center;
-}
 
-p {
+    
+    
+    p {
     margin-top: -10px;
     font-size: 20px;
     text-align: left;
@@ -66,3 +74,5 @@ img {
     background-color: white;
 }
 
+
+}
